load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

npm_link_all_packages(
    name = "node_modules",
)

ts_project(
    name = "ts",
    srcs = glob(["src/**/*.ts"]),
    declaration = True,
    out_dir = ".",
    transpiler = swc,
    deps = [
        ":node_modules",
    ],
)

js_binary(
    name = "socketio-service",
    data = [":ts"],
    entry_point = "src/socketio-service.js",
)

load("@aspect_rules_js//js:defs.bzl", "js_image_layer")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//container:layer.bzl", "container_layer")


platform(
    name = "amd64_linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)
js_image_layer(
    name = "layers",
    binary = ":socketio-service",
    root = "/app",
    visibility = ["//visibility:__pkg__"],
    platform = ":amd64_linux",
)
load("@rules_oci//oci:defs.bzl", "oci_image")
oci_image(
    name = "image",
    cmd = ["/app/main"],
    entrypoint = ["bash"],
    os = "@platforms//os:linux",
    architecture = "@platforms//cpu:x86_64",
    tars = [
        ":layers"
    ]
)

container_push(
    name = "image_push",
    format = "Docker",
    image = ":image",
    registry = "ghcr.io",
    repository = "andrew-delph/video-call-socketio-service",
    tag = "latest",
)
