load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_image_layer")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//container:layer.bzl", "container_layer")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")

npm_link_all_packages(
    name = "node_modules",
)

ts_project(
    name = "ts",
    srcs = glob(["src/**/*.ts","*.json"]),
    transpiler = "tsc",
    # validate = False,
    deps = [
        ":node_modules",
    ],
)

js_binary(
    name = "socketio-service",
    data = [":ts"],
    entry_point = "src/socketio-service.js",
)


platform(
    name = "amd64_linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

js_image_layer(
    name = "layers",
    binary = ":socketio-service",
    platform = ":amd64_linux",
    root = "/app",
    visibility = ["//visibility:__pkg__"],
)

oci_image(
    name = "image",
    architecture = "@platforms//cpu:x86_64",
    cmd = ["/app/main"],
    entrypoint = ["bash"],
    os = "@platforms//os:linux",
    tars = [
        ":layers",
    ],
)

oci_push(
    name = "image_push",
    image = ":image",
    repository = "ghcr.io/andrew-delph/video-call-socketio-service",
)
