load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_js//js:defs.bzl", "js_library")

npm_link_all_packages(
    name = "node_modules",
)


# ts_project(
#     name = "ts",
#     srcs = glob(["src/**/*.ts",]),
#     declaration = True,
#     out_dir = ".",
#     visibility = ["//visibility:public"],
#     deps = [
#         ":node_modules",
#     ],
# )


js_library(
    name = "lib",
    srcs = [
        ":ts","package.json"
    ],
)

npm_package(
    name = "neo4j-grpc-common",
    srcs = [":lib"],
    visibility = ["//visibility:public"],
)


load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@rules_proto//proto:defs.bzl", "proto_library")
load(":proto_defs.bzl", "ts_proto_library")

proto_library(
    name = "protos",
    srcs = ["protos/health.proto", "protos/neo4j.proto", ],
)

ts_project(
    name = "app",
    srcs = glob(["src/**/*.ts",":protos"]),
    declaration = True,
     deps = [
        ":node_modules",
    ],
)